<resources>
    <string name="app_name">R.A.M.A. - Route Assessment and Monitoring Application</string>
    <string name="submit">Submit</string>
    <string name="nb">NORTH</string>
    <string name="sb">SOUTH</string>
    <string name="start">START</string>
    <string name="intransit">IN TRANSIT</string>
    <string name="end">END</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>